--- a/vite-social-links-profile/src/index.css
+++ b/vite-social-links-profile/src/index.css
@@ -102,5 +102,12 @@ body {
         padding: 15px;
         color: var(--white);
         text-align: center;
+        font-weight: 600;
+
+        &:hover {
+            cursor: pointer;
+            color: var(--grey-900);
+            background-color: var(--green);
+        }
     }
 }
