--- a/vite-recipe-page-main/src/index.css
+++ b/vite-recipe-page-main/src/index.css
@@ -3,3 +3,17 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+
+body {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1440px;
+    height: 1955px;
+
+    background-color: #f3e7d8;
+
+    font-size: 16px;
+}
