--- a/vite-recipe-page-main/src/index.css
+++ b/vite-recipe-page-main/src/index.css
@@ -6,12 +6,9 @@
 
 
 body {
-
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 1440px;
-    height: 1955px;
 
     background-color: #f3e7d8;
 
