--- a/vite-product-preview-card/src/scss/product.scss
+++ b/vite-product-preview-card/src/scss/product.scss
@@ -1,3 +1,19 @@
+// primary
+$dark-cyan: hsl(158, 36%, 37%);
+$cream: hsl(30, 38%, 92%);
+
+// neutral
+$dark-blue: hsl(212, 21%, 14%);
+$dark-grayish-blue: hsl(228, 12%, 48%);
+$white: hsl(0, 0%, 100%);
+
+$weight-500: 500;
+$weigth-700: 700;
+
+// Font
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap");
+
 * {
     padding: 0;
     margin: 0;
@@ -10,4 +26,27 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+
+    font-size: 14px;
+}
+
+.montserrat-500 {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: $weight-500;
+    font-style: normal;
+}
+
+.montserrat-700 {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: $weigth-700;
+    font-style: normal;
+}
+
+.fraunces-700 {
+    font-family: "Fraunces", serif;
+    font-optical-sizing: auto;
+    font-weight: $weigth-700;
+    font-style: normal;
 }
