--- a/vite-product-preview-card/src/scss/product.scss
+++ b/vite-product-preview-card/src/scss/product.scss
@@ -10,6 +10,8 @@ $white: hsl(0, 0%, 100%);
 $weight-500: 500;
 $weigth-700: 700;
 
+$mb-30: 30px;
+
 // Font
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap");
@@ -28,6 +30,7 @@ body {
     height: 100vh;
 
     font-size: 14px;
+    background-color: $cream;
 }
 
 .montserrat-500 {
@@ -49,4 +52,106 @@ body {
     font-optical-sizing: auto;
     font-weight: $weigth-700;
     font-style: normal;
+}
+
+.text-preset-1 {
+    font-size: 18px;
+    line-height: 180%;
+    letter-spacing: 0;
+}
+
+.text-preset-2 {
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0;
+}
+
+.container {
+    width: 600px;
+    height: 450px;
+
+    display: flex;
+    border-radius: 10px;
+}
+
+.img {
+    width: 50%;
+    height: 100%;
+    background-image: url("../assets//image-product-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.card-info {
+    width: 50%;
+    padding: 32px;
+    background-color: $white;
+
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.card-header {
+    letter-spacing: 6px;
+    color: $dark-grayish-blue;
+    margin-bottom: 25px;
+}
+
+.card-title {
+    margin-bottom: 25px;
+}
+
+.card-text {
+    color: $dark-grayish-blue;
+    margin-bottom: 25px;
+}
+
+.card-price {
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.first-price {
+    color: $dark-cyan;
+    font-size: 30px;
+    margin-right: 18px;
+}
+
+.second-price {
+    color: $dark-grayish-blue;
+    font-size: 12px;
+    text-decoration: line-through;
+}
+
+.card-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    color: $white;
+    background-color: $dark-cyan;
+    border-radius: 10px;
+}
+
+.card-footer:hover {
+    cursor: pointer;
+    background-color: $dark-blue;
+}
+
+.btn-img {
+    background-image: url("../assets/icon-cart.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+}
+
+.btn-text {
+    margin-left: 10px;
+    font-size: 14px;
 }
