--- a/vite-product-preview-card/src/scss/product.scss
+++ b/vite-product-preview-card/src/scss/product.scss
@@ -95,12 +95,13 @@ body {
 }
 
 .card-header {
-    letter-spacing: 6px;
+    letter-spacing: 5px;
     color: $dark-grayish-blue;
     margin-bottom: 25px;
 }
 
 .card-title {
+    color: $dark-blue;
     margin-bottom: 25px;
 }
 
@@ -154,4 +155,54 @@ body {
 .btn-text {
     margin-left: 10px;
     font-size: 14px;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .img {
+        width: 100%;
+        height: 240px;
+        background-image: url("../assets/image-product-mobile.jpg");
+
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 10px;
+    }
+
+    .card-info {
+        width: 100%;
+        padding: 25px;
+        background-color: $white;
+
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+    }
+
+    .card-header {
+        font-size: 12px;
+        margin-bottom: 20px;
+    }
+
+    .card-title {
+        margin-bottom: 20px;
+        font-size: 16px;
+    }
+
+    .card-text {
+        margin-bottom: 20px;
+    }
+
+    .card-price {
+        margin-bottom: 20px;
+    }
 }
