--- a/vite-grid-section/src/assets/css/index.css
+++ b/vite-grid-section/src/assets/css/index.css
@@ -27,19 +27,22 @@ body {
   place-items: center;
   min-width: 375px;
   min-height: 100vh;
+  background-color: var(--neutral-ligth-gary-blue);
 }
 
 .container {
   display: grid;
-  grid-template-columns: 540px 255px 255px;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 255px 255px 255px 255px;
+  grid-template-rows: auto;
   column-gap: 24px;
   row-gap: 30px;
 }
 
 .card-img {
   display: flex;
+  align-items: center;
   gap: 14px;
+  margin-bottom: 24px;
 }
 
 .card-img p {
@@ -50,7 +53,7 @@ body {
 .card-img img {
   width: 30px;
   height: 30px;
-  border: 2px solid var(--primary-moderate-violet);
+  border: 2px solid;
   border-radius: 50%;
 }
 
@@ -60,29 +63,133 @@ body {
   opacity: 50%;
 }
 
-.item1 {
-  grid-column-start: 1;
-  grid-column-end: 2;
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 24px;
 }
 
-.item2 {
-  grid-column-start: 2;
-  grid-column-end: 3;
+.text-testimonial {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  margin-bottom: 24px;
 }
 
-.item3 {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 3;
+.text-quote {
+  font-size: 11px;
+  font-weight: 500;
+  letter-spacing: 0.2px;
+  line-height: 140%;
+  opacity: 70%;
+  color: var(--neutral-light-gary);
 }
 
-.item4 {
-  grid-row-start: 2;
-  grid-row-end: 3;
+
+.daniel {
+  background-color: var(--primary-moderate-violet);
+  grid-area: 1 / 1 / 2 / 3;
+  position: relative;
+
+  .card-img {
+    color: var(--primary-white);
+  }
+
+  .card-img>img {
+    border-color: var(--primary-moderate-violet);
+  }
+
+  .text-testimonial {
+    position: relative;
+    color: var(--primary-white);
+  }
+
+  .background-svg {
+    position: absolute;
+    top: 0;
+    right: 90px;
+  }
 }
 
-.item5 {
-  grid-column-start: 2;
-  grid-column-end: 3;
+.jonathan {
+  background-color: var(--primary-dark-gray-blue);
+  grid-area: 1 / 3 / 2 / 4;
+
+  .card-img {
+    color: var(--primary-white);
+  }
+
+  .card-img>img {
+    border-color: var(--primary-dark-gray-blue);
+  }
+
+  .text-testimonial {
+    color: var(--primary-white);
+  }
+}
+
+.jeanette {
+  background-color: var(--primary-white);
+  grid-area: 2 / 1 / 3 / 2;
+
+  .card-img {
+    color: var(--primary-dark-gray-blue);
+  }
+
+  .card-img>img {
+    border-color: var(--primary-white);
+  }
+
+  .text-testimonial {
+    font-size: 20px;
+    color: var(--primary-dark-gray-blue);
+  }
+
+  .text-quote {
+    color: var(--primary-dark-gray-blue);
+  }
+}
+
+.patrick {
+  background-color: var(--primary-black-blue);
+  grid-area: 2 / 2 / 3 / 4;
+
+  .text-testimonial {
+    color: var(--primary-white);
+    font-size: 16px;
+  }
+
+  .text-quote {
+    letter-spacing: 0;
+    font-size: 12px;
+  }
+
+  .card-img {
+    color: var(--primary-white);
+  }
+
+  .card-img>img {
+    color: var(--primary-moderate-violet);
+  }
+}
+
+.kira {
+  background-color: var(--primary-white);
+  grid-area: 1 / 4 / 3 / 5;
+
+  .card-img {
+    color: var(--primary-dark-gray-blue);
+  }
+
+  .text-testimonial {
+    font-size: 20px;
+    color: var(--primary-dark-gray-blue);
+  }
+
+  .text-quote {
+    font-size: 12px;
+    color: var(--primary-dark-gray-blue);
+  }
 }
