--- a/vite-grid-section/src/assets/css/index.css
+++ b/vite-grid-section/src/assets/css/index.css
@@ -109,7 +109,7 @@ body {
   .background-svg {
     position: absolute;
     top: 0;
-    right: 90px;
+    right: 2.5rem;
   }
 }
 
@@ -191,5 +191,37 @@ body {
   .text-quote {
     font-size: 12px;
     color: var(--primary-dark-gray-blue);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    margin-top: 71px;
+    margin-bottom: 71px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .daniel {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  .jonathan {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  .jeanette {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  .patrick {
+    grid-area: 4 / 1 / 5 / 2;
+  }
+
+  .kira {
+    grid-area: 5 / 1 / 6 / 2;
   }
 }
